Add Training Endpoint, Model and Response
