# src/api/infrastructure/swagger/docs/swagger.json
@@ -20,15 +20,15 @@
                 "tags": [
                     "exercise"
                 ],
-                "summary": "Create a new exercise",
+                "summary": "Create a new exercise tests",
                 "parameters": [
                     {
                         "description": "Add an exercise",
-                        "name": "food",
+                        "name": "exercise",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.ExerciseRequest"
+                            "$ref": "#/definitions/github.com_igor-ferreira-almeida_workout-api_src_api_app_presentation_exercisedto_request.ExerciseRequest"
                         }
                     }
                 ],
@@ -36,7 +36,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/response.ExerciseResponse"
+                            "$ref": "#/definitions/github.com_igor-ferreira-almeida_workout-api_src_api_app_presentation_exercisedto_response.ExerciseResponse"
                         }
                     }
                 }
@@ -72,7 +72,45 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.ExerciseResponse"
+                            "$ref": "#/definitions/github.com_igor-ferreira-almeida_workout-api_src_api_app_presentation_exercisedto_response.ExerciseResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/training": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "training"
+                ],
+                "summary": "Create a new training",
+                "parameters": [
+                    {
+                        "description": "Add an training",
+                        "name": "training",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.TrainingRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/response.TrainingResponse"
                         }
                     }
                 }
@@ -80,7 +118,7 @@
         }
     },
     "definitions": {
-        "request.ExerciseRequest": {
+        "github.com_igor-ferreira-almeida_workout-api_src_api_app_presentation_exercisedto_request.ExerciseRequest": {
             "type": "object",
             "properties": {
                 "muscle_group": {
@@ -105,7 +143,7 @@
                 }
             }
         },
-        "response.ExerciseResponse": {
+        "github.com_igor-ferreira-almeida_workout-api_src_api_app_presentation_exercisedto_response.ExerciseResponse": {
             "type": "object",
             "properties": {
                 "id": {
@@ -125,6 +163,169 @@
                 },
                 "weight": {
                     "type": "integer"
+                }
+            }
+        },
+        "github.com_igor-ferreira-almeida_workout-api_src_api_app_presentation_trainingdto_request.ExerciseRequest": {
+            "type": "object",
+            "properties": {
+                "executions": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/request.ExecutionRequest"
+                    }
+                },
+                "muscle_group": {
+                    "type": "string",
+                    "example": "Chest"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "Bench Press"
+                }
+            }
+        },
+        "github.com_igor-ferreira-almeida_workout-api_src_api_app_presentation_trainingdto_response.ExerciseResponse": {
+            "type": "object",
+            "properties": {
+                "executions": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/response.ExecutionResponse"
+                    }
+                },
+                "muscle_group": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "volume": {
+                    "type": "integer"
+                }
+            }
+        },
+        "request.ExecutionRequest": {
+            "type": "object",
+            "properties": {
+                "sets": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/request.SetRequest"
+                    }
+                },
+                "technique": {
+                    "type": "string",
+                    "example": "Normal,Drop Set,Bi Set,Rest Pause"
+                }
+            }
+        },
+        "request.SetRequest": {
+            "type": "object",
+            "properties": {
+                "reps": {
+                    "type": "integer",
+                    "example": 12
+                },
+                "rest": {
+                    "type": "integer",
+                    "example": 30
+                },
+                "weight": {
+                    "type": "integer",
+                    "example": 20
+                }
+            }
+        },
+        "request.TrainingRequest": {
+            "type": "object",
+            "properties": {
+                "date": {
+                    "type": "string",
+                    "example": "2021-12-07T00:00:00-03:00"
+                },
+                "exercises": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github.com_igor-ferreira-almeida_workout-api_src_api_app_presentation_trainingdto_request.ExerciseRequest"
+                    }
+                },
+                "muscle_groups": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    },
+                    "example": [
+                        "Chest",
+                        "Back",
+                        "Deltoids",
+                        "Biceps",
+                        "Triceps",
+                        "Forearms",
+                        "Quadriceps",
+                        "Hamstrings",
+                        "Calves"
+                    ]
+                }
+            }
+        },
+        "response.ExecutionResponse": {
+            "type": "object",
+            "properties": {
+                "sets": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/response.SetResponse"
+                    }
+                },
+                "technique": {
+                    "type": "string"
+                },
+                "volume": {
+                    "type": "integer"
+                }
+            }
+        },
+        "response.SetResponse": {
+            "type": "object",
+            "properties": {
+                "reps": {
+                    "type": "integer"
+                },
+                "rest": {
+                    "type": "integer"
+                },
+                "volume": {
+                    "type": "integer"
+                },
+                "weight": {
+                    "type": "integer"
+                }
+            }
+        },
+        "response.TrainingResponse": {
+            "type": "object",
+            "properties": {
+                "date": {
+                    "type": "string"
+                },
+                "exercises": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github.com_igor-ferreira-almeida_workout-api_src_api_app_presentation_trainingdto_response.ExerciseResponse"
+                    }
+                },
+                "muscle_groups": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "volume_per_muscle_group": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "integer"
+                    }
                 }
             }
         }
